--- a/test/test.ini
+++ b/test/test.ini
@@ -28,6 +28,8 @@ p7b= port=6666 host=127.0.0.1 dbname=p7
 p7c= port=6666 host=127.0.0.1 dbname=p7
 p8 = port=6666 host=127.0.0.1 dbname=p0 connect_query='set enable_seqscan=off; set enable_nestloop=off'
 p9 = port=6666 host=127.0.0.1 dbname=postgres server_lifetime=2 user=bouncer
+db1 = port=6666 host=127.0.0.1 dbname=p0 user=puser2
+db2 = port=6666 host=127.0.0.1 dbname=p0 user=puser1
 
 user_passthrough = port=6666 host=127.0.0.1 dbname=p0
 user_passthrough2 = port=6666 host=127.0.0.1 dbname=p2
